<resources>
    <string name="app_name">Ex3</string>

    <string name="infinity_war_title">Avengers: Infinity War</string>
    <string name="infinity_war_release_date">2018-04-25</string>
    <string name="infinity_war_overview">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="infinity_war_trailer">https://www.youtube.com/watch?v=6ZfuNTqbHE8</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="details_release_text">Released: </string>
    <string name="details_trailer_text">Movie Trailer</string>
    <string name="details_overview_text">Overview: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="async_task_activity">This is AsyncTask Activity</string>
    <string name="handler_exe_activity">This is Thread Handler Activity</string>
    <string name="msg_oncreate">Async Task created</string>
    <string name="msg_onstart">Async Task Started</string>
    <string name="msg_oncancel">Async Task cancelled</string>
    <string name="msg_thread_oncreate">Thread Task created</string>
    <string name="msg_thread_onstart">Thread Task Started</string>
    <string name="msg_thread_oncancel">Thread Task cancelled</string>
    <string name="msg_preexecute">Pre execute run</string>
    <string name="msg_postexecute">Post execute run</string>
    <string name="msg_should_create_task">must click \"create\" task first</string>
    <string name="done">Done!</string>
    <string name="title_activity_threads">ThreadsActivity</string>

    <string name="start_service">Start Service</string>
    <string name="starting_hardjob_service_msg">Starting Hard Job Service</string>
    <string name="finishing_hardjob_service_msg">Finishing Hard Job Service, id: %1$d</string>

    <string name="starting_intent_service_msg">Starting IntentService</string>
    <string name="finishing_intent_service_msg">Finishing IntentService</string>
    <string name="start_intent_service">Start IntentService</string>
    <string name="the_progress">The progress</string>

    <string name="something_went_wrong_text">Something went wrong :-/</string>

    <string name="details_loading_trailer_text">Loading…</string>

    <string name="notification_title">Downloading…</string>
    <string name="notification_message">%1$d %%</string>
    <string name="channel_name">Default channel</string>
    <string name="channel_description">It is a channel for default notifications</string>



</resources>
