<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/back_image_size"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/infinity_war_background" />

        <ImageButton
            android:id="@+id/imageButton_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/image_view"
            android:layout_alignBottom="@+id/image_view"
            android:layout_margin="@dimen/spacing_s"
            android:tint="@color/purple"
            app:srcCompat="@android:drawable/stat_sys_download" />

        <ImageView
            android:id="@+id/secondary-view"
            android:layout_width="116dp"
            android:layout_height="175dp"
            android:layout_below="@id/image_view"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/infinity_war_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/secondary-view"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/secondary-view"
            android:orientation="vertical">


            <TextView
                android:id="@+id/detailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/infinity_war_title"
                android:textColor="@color/purple"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_tv_released"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="start"
                    android:text="@string/details_release_text"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/details_tv_released_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:gravity="start"
                    android:text="@string/infinity_war_release_date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/detailsPlayTrailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/details_trailer_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/details_tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/secondary-view"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/details_overview_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:text="@string/infinity_war_overview"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_below="@id/details_tv_overview" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>