<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BackgroundServices.BGServiceActivity">

    <TextView
        android:id="@+id/tv_progress_title"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:text="@string/the_progress"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <TextView
        android:id="@+id/tv_progress_value"
        android:layout_width="106dp"
        android:layout_height="49dp"
        android:layout_marginTop="72dp"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_progress_title" />

    <Button
        android:id="@+id/btn_start_intent_service"
        android:layout_width="133dp"
        android:layout_height="58dp"
        android:layout_marginBottom="72dp"
        android:text="@string/start_intent_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_service"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_start_service"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="72dp"
        android:text="@string/start_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_start_intent_service" />
</android.support.constraint.ConstraintLayout>